--- a/watering/watering/templates/html/index.html
+++ b/watering/watering/templates/html/index.html
@@ -2,25 +2,26 @@
 <html>
 <head>
   <title>index</title>
+  {%load static%}
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="css/bootstrap.css">  
-  <script src="js/jquery.min.js"></script>
-  <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="js/echarts.min.js"></script>
-  <script type="text/javascript" src="js/echarts-liquidfill.min.js"></script>
+  <link rel="stylesheet" href="{%static 'css/bootstrap.css'%}">  
+  <script src="{%static 'js/jquery.min.js'%}"></script>
+  <script src="{%static 'js/bootstrap.min.js'%}"></script>
+	<script type="text/javascript" src="{%static 'js/echarts.min.js'%}"></script>
+	<script type="text/javascript" src="{%static 'js/echarts-liquidfill.min.js'%}"></script>
   <style type="text/css">
-                @import "./css/index.css"
+@import "{%static 'css/index.css'%}"
   </style> 
   <style type="text/css">
-                @import "./css/zhexian.css"
+@import "{%static 'css/zhexian.css'%}"
   </style>
 
-  <script src="js/jquery.min.js"></script>
-  <script src="js/monitor.js"></script>
-  <script src="js/monitor2.js"></script>
+  <script src="{%static 'js/jquery.min.js'%}"></script>
+  <script src="{%static 'js/monitor.js'%}"></script>
+  <script src="{%static 'js/monitor2.js'%}"></script>
 
-  <script src="js/three.min.js"></script>
+  <script src="{%static 'js/three.min.js'%}"></script>
 
 
   <script type="text/javascript">
@@ -73,8 +74,8 @@
 <div class="container ">
    <div class="jumbotron container_f">
         <h1>欢迎进入！</h1>
-        <p>今天是2020年7月8日！</p>
-        <p><a class="btn btn-primary btn-lg" role="button">
+	<p>今天是2020年7月8日！数据更新到{{hour}}时{{minute}}分{{second}}秒</p>
+        <p><a class="btn btn-primary btn-lg" role="button" href='/datarecord?time_info=7'>
         查看记录</a>
       </p>
    </div>
@@ -95,15 +96,15 @@
 				    </span>
 				</h1>
 				<h1 class="h_2"><span class="label label-success">
-					<span class="glyphicon glyphicon-leaf" style="color: rgb(0, 107, 0);"> 温和</span>
+					<span class="glyphicon glyphicon-leaf" style="color: rgb(0, 107, 0);"> 寒冷</span>
 				    </span>
 				</h1>
 			</div>
 			<div class="progress progress-striped">
 			    <div class="progress-bar progress-bar-success" role="progressbar"
 				 aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"
-				 style="width: 90%;">
-				<span class="sr-only">90% 完成（成功）</span>
+					  style="width: {{temperature_percent}}%;">
+				<span class="sr-only">{{temperature_percent}}%</span>
 			    </div>
 			</div>
 
@@ -131,8 +132,8 @@
                        	<div class="progress progress-striped">
 			    <div class="progress-bar progress-bar-info" role="progressbar"
 				 aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"
-				 style="width: 30%;">
-				<span class="sr-only">30% 完成（信息）</span>
+					  style="width: {{humidity_percent}}%;">
+				<span class="sr-only">{{humidity_percent}}%</span>
 			    </div>
 			</div>
 
@@ -141,7 +142,7 @@
 	<div class="col-xs-12 col-md-4">
 		<div class='model_3'>
 			 <div class="main">
-				<div id="layer04" class="layer" data-ydata="100,200,100,150,160,180,190,130,200,150">
+				 <div id="layer04" class="layer" data-ydata="{{humidity_data}}">
 					<div id="layer04_left" class="layer04-panel">
 						<div id="layer04_left_label" class="layer04-panel-label">
 							<span class="label label-default">湿度曲线图</span></div>
@@ -150,7 +151,7 @@
 				</div>
 			</div>
 			<div class="main">
-                                <div id="layer05" class="layer" data-ydata="100,200,100,150,160,180,190,130,200,150">
+				<div id="layer05" class="layer" data-ydata="{{temperature_data}}">
                                         <div id="layer05_left" class="layer05-panel">
                                                 <div id="layer05_left_label" class="layer05-panel-label">
 						<span class="label label-default">温度曲线图</span>
@@ -167,13 +168,13 @@
 </div>
 
 
-<script src='js/delaunator.min.js'></script>
-<script  src="js/index.js"></script>
+<script src="{%static 'js/delaunator.min.js'%}"></script>
+<script  src="{%static 'js/index.js'%}"></script>
 
 
 <script type="text/javascript">
-                    var value = 0.3;
-                    var data = [value, value, value, ];
+			var value = {{humidity}};
+                    	var data = [value, value, value, ];
                         var dom_1 = document.getElementById("container_1");
                         // dom.style.height=window.innerHeight+'px';
                         var myChart = echarts.init(dom_1);
@@ -188,7 +189,7 @@
                                 color: '#DFF0D8'
                             }]),
                              title: {
-                                 text: (value * 100).toFixed(0) + '{a|%}',
+                                 text: (value *1).toFixed(0) + '{a|.}',
                                  textStyle: {
                                      fontSize: 50,
                                      fontFamily: 'Microsoft Yahei',
@@ -306,8 +307,8 @@
 
 
  <script type="text/javascript">
-                    var value = 0.3;
-                    var data = [value, value, value, ];
+	 		var value = {{temperature}};
+                    	var data = [value, value, value, ];
                         var dom_2 = document.getElementById("container_2");
                         // dom.style.height=window.innerHeight+'px';
                         var myChart = echarts.init(dom_2);
@@ -322,7 +323,7 @@
                                 color: '#d9edf7'
                             }]),
                              title: {
-                                 text: (value * 100).toFixed(0) + '{a|%}',
+                                 text: (value * 1).toFixed(0) + '{a|.}',
                                  textStyle: {
                                      fontSize: 50,
                                      fontFamily: 'Microsoft Yahei',
@@ -437,6 +438,14 @@
                                 myChart.resize();
                         }
            </script>
+
+
+ <script type="text/javascript">
+	
+
+ </script>
+
+
 
 </body>
 </html>
